FullSb1-27-apr-15/src/objects/Employment_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Compensation_excl_bonus_in_US__c</fullName>
        <description>Populated from the contact</description>
        <label>Annual Compensation excl bonus in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_you_currently_looking_for_a_job__c</fullName>
        <inlineHelpText>If you selected &apos;Accepted an offer&apos;, &apos;Offered but rejected&apos; or &apos;Offered but withdrew&apos; then please enter the offer details in the below section. If the student hasn&apos;t received an offer, please skip to the &apos;What are your plans post-graduation&apos; section</inlineHelpText>
        <label>Are you currently looking for a job?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, but I havent received an offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, have received an offer but will not accept it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, I am seeking, my offer was withdrawn by company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have already accepted an offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No I am not seeking employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have an offer but undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_formula__c</fullName>
        <formula>Student__r.Hult_Campus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_t_find_on_TS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can&apos;t find on TS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Bus__c</fullName>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Employment Surveys (City)</relationshipLabel>
        <relationshipName>Employment_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Employment Surveys (City)</relationshipLabel>
        <relationshipName>Employment_Surveys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Base__c</fullName>
        <label>Comp: Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Other_guaranteed_comp__c</fullName>
        <label>Comp: Other guaranteed comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Signing_Bonus__c</fullName>
        <label>Comp: Signing Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Stock_Options__c</fullName>
        <label>Comp: Stock Options</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp__c</fullName>
        <description>Converts base salary field into USD using the HCP_Currency__c.Conversion_Rate_to_USD value</description>
        <formula>Comp_Base__c *  HCP_Currencies_Lookup__r.Conversion_Rate_to_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp: Base in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Bus__c</fullName>
        <inlineHelpText>Use this lookup field to see if the company already exists as an Account in HCP Salesforce. If found, please select and move on to the &apos;Industry&apos; question. If not found, please enter the company name in the field below.</inlineHelpText>
        <label>Company (CR Account in HCP?)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment Surveys (Company (lookup if exists))</relationshipLabel>
        <relationshipName>Employment_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Formula__c</fullName>
        <description>Merges each of the 4 company fields into one field for easy reporting on company name</description>
        <formula>IF( TS_Application__c &lt;&gt; &quot;&quot;, TS_Application__r.ts2__Account__r.Name ,
IF( Offer_Company_Name__c &lt;&gt; &quot;&quot; , Offer_Company_Name__c ,
IF( Offer_Company__c &lt;&gt; &quot;&quot; , Offer_Company__r.Name ,
IF( Name_of_Bus__c &lt;&gt; &quot;&quot; , Name_of_Bus__c ,
IF( Company_Bus__c &lt;&gt; &quot;&quot; , Company_Bus__r.Name , &quot;&quot; )))))</formula>
        <label>Company.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>IF( ISBLANK(TS_Application__c  ), 

IF (ISBLANK(Offer_Company__r.Name ), Offer_Company_Name__c , Offer_Company__r.Name),  TS_Application__r.ts2__Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001-5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5001-10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,001+ employees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counter_Grad_School__c</fullName>
        <description>For reporting purposes only</description>
        <formula>IF(ISPICKVAL( What_are_you_doing_now__c , &apos;Continuing Education&apos; ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter: Grad School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Not_Seeking_Employment__c</fullName>
        <formula>IF( ISPICKVAL(   Are_you_currently_looking_for_a_job__c  , &apos;No I am not seeking employment&apos; ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter: Not Seeking Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Returning_to_Previous_Employer__c</fullName>
        <description>For reporting purposes only</description>
        <formula>IF(
  AND(
     ISPICKVAL( What_are_you_doing_now__c , &apos;Returning to my previous employer&apos; ) ,
     OR(
       NOT(ISBLANK( Previous_Job_Company_Name__c )) ,
       NOT(ISBLANK(  Previous_Job_Company__c  ))
       )
      ) ,
  TRUE , FALSE
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter: Returning to Previous Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Still_Seeking_Employment__c</fullName>
        <description>For reporting purposes only</description>
        <formula>IF( 
   OR(
     ISPICKVAL( Are_you_currently_looking_for_a_job__c , &apos;Yes, but i havent received an offer&apos; ),
     ISPICKVAL( Are_you_currently_looking_for_a_job__c , &apos;Yes, have received an offer but will not accept it&apos;) ,
     ISPICKVAL( Are_you_currently_looking_for_a_job__c , &apos;Yes, I am seeking, my offer was withdrawn by company&apos;)
     ) ,
   TRUE , FALSE
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter: Still Seeking Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Length__c</fullName>
        <label>Expected Length of internship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Years__c</fullName>
        <formula>Student__r.Graduation_Year__c</formula>
        <label>Graduation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Currencies_Lookup__c</fullName>
        <label>HCP Currencies</label>
        <referenceTo>HCP_Currencies__c</referenceTo>
        <relationshipLabel>Employment Surveys</relationshipLabel>
        <relationshipName>Employment_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Bus__c</fullName>
        <inlineHelpText>Once you entered the company name, please proceed with entering the rest of the company and job detail fields within this section.</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel / Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive / Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking / Finance / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambers / Industry Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting / Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Natural Resources/Mining/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government / Not For Profit / NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headhunting / Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare / Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Formula__c</fullName>
        <description>Merges the 3 Industry fields into one convenient field for reporting purposes</description>
        <formula>IF( NOT(ISPICKVAL(Job_Industry__c , &quot;&quot;) ) , TEXT(Job_Industry__c) ,
IF( NOT(ISPICKVAL(Industry_Bus__c , &quot;&quot;) ) , TEXT(Industry_Bus__c) ,
IF( NOT(ISPICKVAL(Industry__c , &quot;&quot;) ) , TEXT(Industry__c) , &quot;&quot; )))</formula>
        <label>Industry.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel / Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive / Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking / Finance / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambers / Industry Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting / Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Natural Resources/Mining/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government / Not For Profit / NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headhunting / Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare / Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_City__c</fullName>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Employment Surveys (City)</relationshipLabel>
        <relationshipName>Employment_Surveys3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Country__c</fullName>
        <formula>Job_City__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development and Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Industry__c</fullName>
        <label>Job Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel / Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive / Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking / Finance / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambers / Industry Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting / Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Natural Resources/Mining/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government / Not For Profit / NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headhunting / Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare / Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law / Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing / Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media / Publications / Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate/Construction/Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports/Events/Entertainment/Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel / Hospitality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title_Bus__c</fullName>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_City__c</fullName>
        <description>Populated from the contact</description>
        <label>Local City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Employment Surveys</relationshipLabel>
        <relationshipName>Employment_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Populated from the contact</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Most_recent_function_experience__c</fullName>
        <description>Populated from the contact</description>
        <label>Most recent function experience</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting / Auditing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art / Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_recent_industry_experience__c</fullName>
        <description>Populated from the contact</description>
        <label>Most recent industry experience</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Bus__c</fullName>
        <inlineHelpText>If you cannot find the company name using the lookup in the previous field, please enter the name of the company in here.</inlineHelpText>
        <label>Company (not in HCP)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_Date__c</fullName>
        <label>Offer Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Company_Name__c</fullName>
        <inlineHelpText>If you cannot find the company name using the lookup in the previous field, please enter the name of the company in here and then move on to the &apos;Ownership Type&apos; question.</inlineHelpText>
        <label>Offer Company (not in HCP)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Company__c</fullName>
        <inlineHelpText>Use this lookup field to see if the company already exists as an Account in HCP Salesforce. If found, please select and move on to the &apos;Ownership Type&apos; question. If not found, please enter the company name in the field below.</inlineHelpText>
        <label>Offer Company (CR Account in HCP?)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment Surveys (Company)</relationshipLabel>
        <relationshipName>Employment_Surveys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Received_Date__c</fullName>
        <label>Offer Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_please_specify__c</fullName>
        <label>Other, please specify</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <inlineHelpText>Having entered the company name, please complete this field and the remaining company/job detail fields within this section.</inlineHelpText>
        <label>Ownership Type</label>
        <picklist>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>Populated from the Contact</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Position_Formula__c</fullName>
        <description>Merges each of the 3 job title fields into one convenient field for reporting.</description>
        <formula>IF( TS_Application__c &lt;&gt; &quot;&quot;, TS_Application__r.ts2__Job__r.Name ,
IF( Job_Title__c &lt;&gt; &quot;&quot; , Job_Title__c ,
IF(  Job_Title_Bus__c &lt;&gt; &quot;&quot; , Job_Title_Bus__c , &quot;&quot; )))</formula>
        <label>Position.</label>
        <type>Text</type>
    </fields>
</CustomObject>